traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:8: error: not found: type Bolean
def fini() : Bolean = {
             ^